--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,29 +15,45 @@
                    ">
                 Login
             </div>
-            <div class="">
-                <form class="bg-white rounded-bottom-2">
-                    <div class="p-2">
-                        <div class="form-group my-2 ">     
-                            <input type="text" class="form-control" id="usernameFormControll" placeholder="Username">
-                        </div>
+            <div class="border p-2 bg-white">
+                <form class="bg-white rounded-bottom-2" [formGroup]="loginExistUser"
+                    (ngSubmit)="loginUser(loginExistUser)">
 
-                        <div class="form-group my-2">
-                            <input type="password" class="form-control" id="passwordFormControll" placeholder="Password">
-                        </div>
 
-                        <div>
-                            <a href="#"  class="text-decoration-underline text-black-50 fs-6">
-                                Forgett Password?
-                            </a>
-                        </div>
+
+                    <div class="form-group my-2 ">
+                        <input formControlName="userName" type="text" class="form-control" id="usernameFormControll"
+                            placeholder="Username">
+                    </div>
+                    <div class="text-danger"
+                        *ngIf="loginExistUser.get('userName')?.errors && loginExistUser.get('userName')?.touched">
+                        <p *ngIf="loginExistUser.get('userName')?.getError('required')">Username Reqired</p>
+                        <p *ngIf="loginExistUser.get('userName')?.getError('minlength')">Username minlength 2</p>
+                        <p *ngIf="loginExistUser.get('userName')?.getError('maxlength')">Username maxlength 25</p>
 
                     </div>
+
+                    <div class="form-group my-2 ">
+                        <input formControlName="password" type="password" class="form-control" id="passwordFormControll"
+                            placeholder="Password">
+
+                        <div class="text-danger"
+                            *ngIf="loginExistUser.get('password')?.errors && loginExistUser.get('password')?.touched">
+                            <p *ngIf="loginExistUser.get('password')?.getError('required')">Password is reqired
+                            </p>
+                        </div>
+                    </div>
+
+
                     <div class="text-end p-2">
-                        <button type="submit" class="btn roseirie-background text-white ">
-                            <i class="fa-solid fa-spinner fa-spin "></i>
-                            <Span> Login </Span>
+                        <button type="submit" class="btn roseirie-background text-white"
+                            [disabled]="loginExistUser.invalid">
+                            <i *ngIf="isloading" class="fa-solid fa-spinner fa-spin "></i>
+                            <Span *ngIf="!isloading"> Login </Span>
                         </button>
+                    </div>
+                    <div class="text-danger" *ngIf="errormessage">
+                        A7a
                     </div>
                 </form>
             </div>
