--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="col-3 col-md-3 col-xl-2 col-sm-2 px-sm-2 px-0">
+        <div class="col-3 col-md-3 col-xl-2 col-sm-2 px-sm-2 px-0" *ngIf="isLogin" >
             <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
                 <a href="/"
                     class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none row">
@@ -8,7 +8,7 @@
                         <img class="col-lg-3 col-md-4 col-sm-6" src="../../assets/images/logo.png" alt="Logo" />
                     </span>
                 </a>
-                <ul *ngIf="isLogin" class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
 
                     <li class="nav-item">
                         <a class="nav-link px-0 text-dark text-decoration-none" routerLink="/dashboard"
@@ -26,17 +26,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-0 text-dark text-decoration-none" routerLink="/newMerchent"
+                        <a class="nav-link px-0 text-dark text-decoration-none" routerLink="/users"
                             routerLinkActive="">
-
                             <i class="fa-regular fa-user p-1"></i>
                             <span class="ms-1 d-none d-sm-inline">All users</span>
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ">
 
-                        <a class="nav-link px-0 text-dark text-decoration-none" (click)="logout()">
+                        <a class="nav-link px-0 text-dark text-decoration-none" (click)="logout()"  routerLinkActive="">
 
                             <i class="fa-solid fa-outdent p-1"></i>
 
@@ -45,16 +44,6 @@
                     </li>
                 </ul>
 
-                <ul *ngIf="!isLogin" class="nav nav-pills flex-end mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                  
-                    <li class="nav-item">
-                        <a class="nav-link px-0 text-dark text-decoration-none" routerLink="/login" routerLinkActive="">
-                            <i class="fa-solid fa-indent p-1"></i>
-                            
-                            <span class="ms-1 d-none d-sm-inline">Login</span>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </div>
         <div class="col  bg-light">
