--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,61 +1,52 @@
-<div class="d-flex align-items-start row formHolder">
-    <div class=" rounded-5 d-flex flex-column col-6 vh-100 w-100  justify-content-around align-items-center">
-        <div class=" col-lg-6 col-md-10 col-sm-12">
-            <div class="
-                      text-center
-                      text-capitalize 
-                      p-2 
-                      rounded-top-5
-                      text-white 
-                      fw-bolder 
-                      roseirie-background 
-                      fs-5
-                      m-0 
-                      border    
-                   ">
-                Login
-            </div>
-            <div class="border p-2 bg-white">
-                <form class="bg-white rounded-bottom-2" [formGroup]="loginExistUser"
-                    (ngSubmit)="loginUser(loginExistUser)">
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 login-conent-parent">
 
 
+               <div class="login-content">
+                <form [formGroup]="loginExistUser" (ngSubmit)="loginUser(loginExistUser)">
+                    <div class="text-center login-logo">
+                        <a href="#">
+                            <img src="../../assets/images/logo.png" width="150" height="150" class="rounded">
+                        </a>
+                    </div>
 
-                    <div class="form-group my-2 ">
+                    <div class="form-group mb-3">
                         <input formControlName="userName" type="text" class="form-control" id="usernameFormControll"
-                            placeholder="Username">
-                    </div>
-                    <div class="text-danger"
-                        *ngIf="loginExistUser.get('userName')?.errors && loginExistUser.get('userName')?.touched">
-                        <p *ngIf="loginExistUser.get('userName')?.getError('required')">Username Reqired</p>
-                        <p *ngIf="loginExistUser.get('userName')?.getError('minlength')">Username minlength 2</p>
-                        <p *ngIf="loginExistUser.get('userName')?.getError('maxlength')">Username maxlength 25</p>
-
-                    </div>
-
-                    <div class="form-group my-2 ">
-                        <input formControlName="password" type="password" class="form-control" id="passwordFormControll"
-                            placeholder="Password">
-
+                            placeholder="Username" />
                         <div class="text-danger"
-                            *ngIf="loginExistUser.get('password')?.errors && loginExistUser.get('password')?.touched">
-                            <p *ngIf="loginExistUser.get('password')?.getError('required')">Password is reqired
-                            </p>
+                            *ngIf="loginExistUser.get('userName')?.errors && loginExistUser.get('userName')?.touched">
+                            <p *ngIf="loginExistUser.get('userName')?.getError('required')">Username is required</p>
+                            <p *ngIf="loginExistUser.get('userName')?.getError('minlength')">Username must be at least 2
+                                characters</p>
+                            <p *ngIf="loginExistUser.get('userName')?.getError('maxlength')">Username cannot exceed 25
+                                characters</p>
                         </div>
                     </div>
 
+                    <div class="form-group mb-4">
+                        <input formControlName="password" type="password" class="form-control" id="passwordFormControll"
+                            placeholder="Password" />
+                        <div class="text-danger"
+                            *ngIf="loginExistUser.get('password')?.errors && loginExistUser.get('password')?.touched">
+                            <p *ngIf="loginExistUser.get('password')?.getError('required')">Password is required</p>
+                        </div>
+                    </div>
 
-                    <div class="text-end p-2">
+                    <div class="text-end">
                         <button type="submit" class="btn roseirie-background text-white"
                             [disabled]="loginExistUser.invalid">
-                            <i *ngIf="isloading" class="fa-solid fa-spinner fa-spin "></i>
-                            <Span *ngIf="!isloading"> Login </Span>
+                            <i *ngIf="isloading" class="fa-solid fa-spinner fa-spin"></i>
+                            <span *ngIf="!isloading">Login</span>
                         </button>
                     </div>
-                    <div class="text-danger" *ngIf="errormessage">
-                        A7a
+
+                    <div class="text-danger text-center mt-3" *ngIf="errormessage">
+                        Wrong username or Password
                     </div>
                 </form>
+               </div>
             </div>
         </div>
     </div>
