--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="container-fluid d-flex justify-content-center align-items-center vh-100 bg-light p-0 ">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 login-conent-parent">
