--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-    <table class="table table-striped">
+<div class="container-fluid p-0">
+    <table class="table table-striped text-center">
         <thead>
             <tr>
-                <th>ID</th>
+          
                 <th>Username</th>
                 <th>Email</th>
                 <th>Phone number</th>
@@ -13,15 +13,15 @@
         </thead>
         <tbody>
             <tr *ngFor="let user of users">
-                <td>{{ user.id }}</td>
-                <td>{{ user.name }}</td>
+                <td>{{ user.userName }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.phone }}</td>
+                <td>{{ user.phoneNumber }}</td>
                 <td>{{ user.role }}</td>
+         
                 <td>
                     <div class="row d-flex flex-row justify-content-around">
-                        <button class="btn btn-primary col-5" (click)="editUser(user)">Edit</button>
-                        <button class="btn btn-danger col-4" (click)="deleteUser(user)">Delete</button>
+                        <button class="btn btn-warning col-6" (click)="editUser(user)"><i class="fa-solid fa-pen-to-square"></i></button>
+                        <button class="btn btn-danger col-4" (click)="deleteUser(user)"><i class="fa-solid fa-trash"></i></button>
 
                     </div>
                 </td>
