--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container-fluid p-0">
     <app-login *ngIf="!isLogin"></app-login>
 
     <div *ngIf="isLogin" class="d-flex">
         <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper" [ngClass]="{'collapsed': !isSidebarOpen}">
+        <div class="bg-white border-right" id="sidebar-wrapper" [ngClass]="{'collapsed': !isSidebarOpen}">
             <!-- Menu Icon -->
             <div class="sidebar-heading d-flex justify-content-end p-2">
                 <span class="navbar-toggler-icon" id="menu-icon" (click)="toggleSidebar()" style="cursor: pointer;">
@@ -12,19 +12,19 @@
             </div>
             <div class="list-group list-group-flush" *ngIf="isSidebarOpen">
     
-                <a class="list-group-item list-group-item-action bg-light" routerLink="/dashboard" routerLinkActive="">
+                <a class="list-group-item list-group-item-action bg-white" routerLink="/dashboard" routerLinkActive="">
                     <i class="fa-solid fa-chart-line p-1"></i>
                     <span class="ms-1 ">Dashboard</span>
                 </a>
-                <a class="list-group-item list-group-item-action bg-light" routerLink="/newMerchent" routerLinkActive="">
+                <a class="list-group-item list-group-item-action bg-white" routerLink="/newMerchent" routerLinkActive="">
                     <i class="fa-solid fa-plus p-1  "></i>
                     <span class="ms-1 ">Create new Merchent</span>
                 </a>
-                <a class="list-group-item list-group-item-action bg-light" routerLink="/users" routerLinkActive="">
+                <a class="list-group-item list-group-item-action bg-white" routerLink="/users" routerLinkActive="">
                     <i class="fa-regular fa-user p-1"></i>
                     <span class="ms-1 ">All users</span>
                 </a>
-                <a class="list-group-item list-group-item-action bg-light" (click)="logout()" routerLinkActive="">
+                <a class="list-group-item list-group-item-action bg-white" (click)="logout()" routerLinkActive="">
     
                     <i class="fa-solid fa-outdent p-1"></i>
     
